--- a/templates/base/_layouts/invoice.html
+++ b/templates/base/_layouts/invoice.html
@@ -23,19 +23,19 @@ layout: default
  <table class="info">
   <tr>
    <th>Bank:</th>
-   <td>HSBC</td>
+   <td>{{ site.data.business.bank }}</td>
   </tr>
   <tr>
    <th>Account Name:</th>
-   <td>My Consultancy</td>
+   <td>{{ site.data.business.name }}</td>
   </tr>
   <tr>
    <th>Sort code:</th>
-   <td>xx-xx-xx</td>
+   <td>{{ site.data.business.sort_code }}</td>
   </tr>
   <tr>
    <th>Account number:</th>
-   <td>xxxxxxxx</td>
+   <td>{{ site.data.business.account_number }}</td>
   </tr>
  </table>
 </div>
